# GearVR-Controller-Bridge

./: LICENSE  README.md  README.zh-CN.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: release.yml
public/locales/en/: translation.json
public/locales/zh/: translation.json
src/: App.css  App.tsx  i18n.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/locales/en/: translation.json
src-tauri/locales/zh/: translation.json
src-tauri/src/: commands.rs  lib.rs  logging.rs  main.rs  state.rs  tray.rs  utils.rs
src-tauri/src/config/: controller_config.rs  keymap_config.rs  mod.rs  mouse_config.rs  mouse_mapper_config.rs
src-tauri/src/core/: controller.rs  mod.rs
src-tauri/src/core/bluetooth/: commands.rs  connection.rs  constants.rs  device.rs  manager.rs  mod.rs  notification.rs  scanner.rs  types.rs
src-tauri/src/mapping/: mod.rs  mouse.rs  mouse_mapper.rs
src/components/: DeviceList.tsx  LogViewer.tsx  MainView.tsx  Settings.tsx  StatusBar.tsx
src/components/Controller3DView/: Controller3DView.tsx
src/components/ControllerModel/: ControllerModel.tsx
src/components/ControllerStatus/: ControllerStatus.css  ControllerStatus.tsx
src/components/ControllerView/: ControllerView.css  ControllerView.tsx
