[package]
name = "gearvr-controller-bridge"
version = "0.1.0"
description = "A Tauri App"
authors = ["Raymond Liang"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gearvr_controller_bridge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
btleplug = "0.11"
bluest = "0.6"
tokio = { version = "1.36", features = ["full"] }
regex = "1"
enigo = "0.1"
uuid = "1.7"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
futures-util = "0.3.31"
async-trait = "0.1"
chrono = "0.4.41"
ahrs = { version = "0.7", features = ["field_access"] }
nalgebra = { version = "0.33", features = ["serde-serialize"] }
